--- a/dinov2_finetune.ipynb
+++ b/dinov2_finetune.ipynb
@@ -20,7 +20,6 @@
    },
    "outputs": [],
    "source": [
-    "import fiftyone as fo\n",
     "import torch\n",
     "from torchvision.transforms import v2\n",
     "from torch.hub import load\n",
@@ -29,6 +28,7 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
+    "from utils import overlay\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
@@ -495,16 +495,6 @@
     "segmentator = prepare_model(checkpoint_path)\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "segmentator = segmentator.eval().to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4b61fe44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from preprocess import overlay"
    ]
   },
   {
